--- a/cdk/package.json
+++ b/cdk/package.json
@@ -18,6 +18,7 @@
     "@aws-cdk/aws-ec2": "^0.28.0",
     "@aws-cdk/aws-ecs": "^0.28.0",
     "@aws-cdk/aws-elasticloadbalancingv2": "^0.28.0",
+    "@aws-cdk/aws-iam": "^0.28.0",
     "@aws-cdk/aws-servicediscovery": "^0.28.0",
     "@aws-cdk/cdk": "^0.28.0",
     "source-map-support": "^0.5.9"
